# FRAME

./: CMakeLists.txt  LICENSE.txt  README.md  build.sh  final_ancestry.py  get_accuracy.py  get_proportions.py  packages.yaml  requirements.txt  run.py
inference/: Chrom.py  analyze_batch_class_implementation.py  analyze_wo_batch_class_implementation.py  helper.py
